sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/Special_Procurement__c.object-meta.xml
<CustomObject>
    <label>Special Payment Request</label>
    <nameField>
        <displayFormat>SPR-{00000000}</displayFormat>
        <label>Special Procurement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Payment Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>