sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>a condition set following approval steps</description>
    <inlineHelpText>a condition set following approval steps</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Approved By Finance</fullName>
            </value>
            <value>
                <fullName>Declined By Finance</fullName>
            </value>
            <value>
                <fullName>Approved By Team Lead</fullName>
            </value>
            <value>
                <fullName>Declined By Team Lead</fullName>
            </value>
            <value>
                <fullName>Approved By Director</fullName>
            </value>
            <value>
                <fullName>Declined By Director</fullName>
            </value>
            <value>
                <fullName>Approved by PP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>