sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Approve_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve Reconciliation</label>
    <type>Checkbox</type>
</CustomField>