sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Confirm_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Amount_Approved__c</fullName>
    <formula>IF( Total_Amount__c   =   Total_Amount_Requested__c , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm Amount Approved</label>
    <type>Checkbox</type>
</CustomField>