sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Dim_3__c.field-meta.xml
<CustomField>
    <fullName>Dim_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dim 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim3</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Name</field>
            <operation>notContain</operation>
            <value>XXX</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Special_Procurements3</relationshipName>
    <type>Lookup</type>
</CustomField>