sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/EPR_Created__c.field-meta.xml
<CustomField>
    <fullName>EPR_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPR Created</label>
    <type>Checkbox</type>
</CustomField>