sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/EPR_Status__c.field-meta.xml
<CustomField>
    <fullName>EPR_Status__c</fullName>
    <label>EPR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Over Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>