sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Generate_EPR__c.field-meta.xml
<CustomField>
    <fullName>Generate_EPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate EPR</label>
    <type>Checkbox</type>
</CustomField>