sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Special_Procurements5</relationshipName>
    <type>Lookup</type>
</CustomField>