sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <length>60</length>
    <type>Text</type>
</CustomField>