sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Due_Date__c</fullName>
    <label>Next Step Due Date</label>
    <type>DateTime</type>
</CustomField>