sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/No_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>No_of_Line_Items__c</fullName>
    <description>The number of line items</description>
    <label>No. of Line Items</label>
    <summaryForeignKey>Special_Procurement_Line_Item__c.Special_Procurement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>