sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity</description>
    <inlineHelpText>Oportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Special Payment Requests</relationshipLabel>
    <relationshipName>SPR_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>