sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIN</label>
    <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
    <relationshipLabel>Special Payment Requests</relationshipLabel>
    <relationshipName>Special_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>