sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Procurement_Request__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procurement Request</label>
    <referenceTo>Procurement_Tracking_Sheet__c</referenceTo>
    <relationshipLabel>Special Payment Requests</relationshipLabel>
    <relationshipName>Special_Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>