sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Recon_EPR__c.field-meta.xml
<CustomField>
    <fullName>Recon_EPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reconciliation EPR Created</description>
    <inlineHelpText>Reconciliation EPR Created</inlineHelpText>
    <label>Recon EPR</label>
    <referenceTo>Electronic_Payment_Request__c</referenceTo>
    <relationshipLabel>SPR Recon EPR</relationshipLabel>
    <relationshipName>Recon_EPR</relationshipName>
    <type>Lookup</type>
</CustomField>