sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Recon_EPR_Generated__c.field-meta.xml
<CustomField>
    <fullName>Recon_EPR_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reconciliation EPR Generated</description>
    <inlineHelpText>Reconciliation EPR Generated</inlineHelpText>
    <label>Recon EPR Generated</label>
    <type>Checkbox</type>
</CustomField>