sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Recon_SPR__c.field-meta.xml
<CustomField>
    <fullName>Recon_SPR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recon SPR Created</description>
    <inlineHelpText>Recon SPR Created</inlineHelpText>
    <label>Recon SPR</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipLabel>Recon SPR</relationshipLabel>
    <relationshipName>Recon_SPR</relationshipName>
    <type>Lookup</type>
</CustomField>