sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Reconciled_Balance__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Balance__c</fullName>
    <description>If Recon &gt; 0 Bal = Total Payments - Total Recons else Recon = 0 then get higher of Payments made or Total Recons</description>
    <formula>IF( Reconciled_Total__c &gt; 0, Total_Payments__c - Reconciled_Total__c 
, MAX( Total_Payments__c , Reconciled_Total__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Recon &gt; 0 Bal = Total Payments - Total Recons else Recon = 0 then get higher of Payments made or Total Recons</inlineHelpText>
    <label>Reconciled Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>