sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Reconciled_Total__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Total__c</fullName>
    <description>Roll up of Recons</description>
    <inlineHelpText>Roll up of Recons</inlineHelpText>
    <label>Reconciled Total</label>
    <summarizedField>Special_Payment_Request_Recon__c.Total_Reconciled__c</summarizedField>
    <summaryForeignKey>Special_Payment_Request_Recon__c.Special_Payment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>