sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Reconciled_Totalxxx__c.field-meta.xml
<CustomField>
    <fullName>Reconciled_Totalxxx__c</fullName>
    <label>Reconciled Totalxxx</label>
    <summarizedField>Renconciling_Object__c.Total_Reconciled__c</summarizedField>
    <summaryForeignKey>Renconciling_Object__c.Special_Payment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>