sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Reconciliation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If user has completed Reconciliation</description>
    <inlineHelpText>If user has completed Reconciliation</inlineHelpText>
    <label>Reconciliation Completed</label>
    <type>Checkbox</type>
</CustomField>