sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Reconciliation_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User has submitted reconciliations for processing</description>
    <inlineHelpText>User has submitted reconciliations for processing</inlineHelpText>
    <label>Reconciliation Submitted</label>
    <type>Checkbox</type>
</CustomField>