sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Requesting_Department_TL__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Department TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Special_Procurements</relationshipName>
    <type>Lookup</type>
</CustomField>