sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Special_Procurements</relationshipName>
    <type>Lookup</type>
</CustomField>