sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Date__c</fullName>
    <description>The date these items are required</description>
    <inlineHelpText>The date these items are required</inlineHelpText>
    <label>Required Date</label>
    <type>Date</type>
</CustomField>