sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Requires_PR__c.field-meta.xml
<CustomField>
    <fullName>Requires_PR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires PR?</label>
    <type>Checkbox</type>
</CustomField>