sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The current stage of the PR</description>
    <inlineHelpText>The current stage of the PR</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Finance Approved</fullName>
            </value>
            <value>
                <fullName>Team Lead Approved</fullName>
            </value>
            <value>
                <fullName>Director Approved</fullName>
            </value>
            <value>
                <fullName>EPR Generated</fullName>
            </value>
            <value>
                <fullName>Closed - Finance</fullName>
            </value>
            <value>
                <fullName>Closed - Team Lead</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>SPR Approved</fullName>
            </value>
            <value>
                <fullName>PP Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>