sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <description>Total no. of all line items that have neither been &#39;Approved&#39; or &#39;Rejected&#39;</description>
    <inlineHelpText>Total no. of all line items that have neither been &#39;Approved&#39; or &#39;Rejected&#39;</inlineHelpText>
    <label>Status Flag</label>
    <summarizedField>Special_Procurement_Line_Item__c.Status_Flag__c</summarizedField>
    <summaryForeignKey>Special_Procurement_Line_Item__c.Special_Procurement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>