sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>The total amount that has been approved on the line items</description>
    <inlineHelpText>The total amount that has been approved on the line items</inlineHelpText>
    <label>Total Amount Approved</label>
    <summarizedField>Special_Procurement_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Special_Procurement_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Special_Procurement_Line_Item__c.Special_Procurement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>