sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Total_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Requested__c</fullName>
    <description>The total amount that has been requested on the line items</description>
    <inlineHelpText>The total amount that has been requested on the line items</inlineHelpText>
    <label>Total Amount Requested</label>
    <summarizedField>Special_Procurement_Line_Item__c.Total_Unapproved_Value__c</summarizedField>
    <summaryForeignKey>Special_Procurement_Line_Item__c.Special_Procurement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>