sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Total_Approved_EPR_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_EPR_Value__c</fullName>
    <label>Total Approved EPR Value</label>
    <summarizedField>Special_Procurement_Payment__c.Total_EPR__c</summarizedField>
    <summaryForeignKey>Special_Procurement_Payment__c.Special_Procurement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>