sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <description>Total Payments Requested</description>
    <inlineHelpText>Total Payments Requested</inlineHelpText>
    <label>Total Payments</label>
    <summarizedField>Special_Procurement_Payment__c.Payment_Cost__c</summarizedField>
    <summaryForeignKey>Special_Procurement_Payment__c.Special_Procurement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>