sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Advance</fullName>
            </value>
            <value>
                <fullName>Employee Reimbursement</fullName>
            </value>
            <value>
                <fullName>Special Procurement</fullName>
            </value>
            <value>
                <fullName>Consultancy Agreements</fullName>
            </value>
            <value>
                <fullName>FLT Commissions</fullName>
            </value>
            <value>
                <fullName>FLO Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>