sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/fields/Vendor_Currency__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Currency__c</fullName>
    <formula>Vendor__r.c2g__CODAAccountTradingCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Currency</label>
    <type>Text</type>
</CustomField>