sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/validationRules/Approve_Reconciliation.validationRule-meta.xml
<ValidationRule>
    <fullName>Approve_Reconciliation</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED( Approve_Reconciliation__c )) &amp;&amp; 
(CASE($User.Id, 
&quot;005D0000008RwqH&quot;,1, 
&quot;005D0000008w9Fd&quot;,1,
&quot;005D0000003Ykhb&quot;,1,
&quot;005D0000005UNZo&quot;,1,0) = 0)</errorConditionFormula>
    <errorDisplayField>Approve_Reconciliation__c</errorDisplayField>
    <errorMessage>You do not have permission to edit this field</errorMessage>
</ValidationRule>