sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/validationRules/CommentsValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CommentsValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(  Comments__c  ) )</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Please explain why this is an urgent procurement</errorMessage>
</ValidationRule>