sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/validationRules/CompanyValidationOnSPR.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyValidationOnSPR</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Requesting_Company__r.Type__c = &quot;company&quot; )</errorConditionFormula>
    <errorDisplayField>Requesting_Company__c</errorDisplayField>
    <errorMessage>Please select Company</errorMessage>
</ValidationRule>