sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/listViews/Accounting_Special_Procurement.listView-meta.xml
<ListView>
    <fullName>Accounting_Special_Procurement</fullName>
    <filterScope>Queue</filterScope>
    <label>Accounting</label>
    <queue>Accounting</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>