sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/listViews/All_SPRs.listView-meta.xml
<ListView>
    <fullName>All_SPRs</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Requesting_Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requesting_Department__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Requestor__c</columns>
    <columns>Reconciliation_Completed__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SPRs</label>
    <language>en_US</language>
</ListView>