sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/listViews/Cash_Advances.listView-meta.xml
<ListView>
    <fullName>Cash_Advances</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Requesting_Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requesting_Department__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Requestor__c</columns>
    <columns>Reconciliation_Completed__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Cash Advance,Employee Reimbursement</value>
    </filters>
    <label>Cash Advances</label>
    <language>en_US</language>
</ListView>