sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/listViews/FLI_Directors_Special_Procurement.listView-meta.xml
<ListView>
    <fullName>FLI_Directors_Special_Procurement</fullName>
    <filterScope>Queue</filterScope>
    <label>FLI Directors</label>
    <queue>FLI_Directors</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>