sfSandBoxCode/force-app/main/default/objects/Special_Procurement__c/listViews/HR_Admin_Special_Procurement.listView-meta.xml
<ListView>
    <fullName>HR_Admin_Special_Procurement</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Admin</label>
    <queue>HR_Admin</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>